--- a/Account-service-kafka/src/main/resources/application.properties
+++ b/Account-service-kafka/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://127.0.0.1:3307/test
-spring.datasource.username = test1
-spring.datasource.password = test1
+spring.datasource.url = jdbc:mysql://127.0.0.1:****
+spring.datasource.username = ****
+spring.datasource.password = ****
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 kafka.bootstrapAddress=localhost:9092
